--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
     <main>
         <section>
-            <p>This is index</p>
+            <p>This is About</p>
         </section>
     </main>
 </html>
