--- a/spot.html
+++ b/spot.html
@@ -18,7 +18,7 @@
 
     <main>
         <section>
-            <p>This is index</p>
+            <p>This is Spot</p>
         </section>
     </main>
 </html>
