--- a/supplier.html
+++ b/supplier.html
@@ -18,7 +18,7 @@
 
     <main>
         <section>
-            <p>This is index</p>
+            <p>This is supplier</p>
         </section>
     </main>
 </html>
