--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Kool</title>
     </head>
-
+<!--
     <header>
         <nav>
             <ul>
@@ -15,10 +15,15 @@
             </ul>
         </nav>
     </header>
-
+-->
     <main>
         <section>
-            <p>This is index</p>
-        </section>
+            <center>
+                <br>
+                <br>
+                <h1>Welcome to KOOL!</h1>
+                <h3>Please click <a href="supplier.html">Here</a> if you are interested in supplying for KOOLVEND!</h3>
+            </center>
+            </section>
     </main>
 </html>
