--- a/supplier.html
+++ b/supplier.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Kool</title>
+        <title>KOOLVEND</title>
     </head>
-
+<!--
     <header>
         <nav>
             <ul>
@@ -15,10 +15,234 @@
             </ul>
         </nav>
     </header>
-
+-->
     <main>
-        <section>
-            <p>This is supplier</p>
+        <center><h1>Become A Supplier for KOOLVEND!</h1></center>
+        <!--
+        <br>
+        <section id="benefits">
+            <h2>Why supply for KOOLVEND?</h2>
+        </section>
+        <section id="rules">
+        -->
+            <h2>Rules for Supplying:</h2>
+            <ul>
+                <li>Check which items are low in stock in KOOLVEND</li>
+                <br>
+                <li>"Low Stock #," in the tables below, means that as long as the item is less than that number, it means that I am buying.</li>
+                <br>
+                <li>There is a minimum and maximum number of items I will buy at one time, is also listed in the table</li>
+                <br>
+                <li>For 200+ items, I only buy them dropped.</li>
+                <br>
+                <li>Ask me first if you are unsure of what I meant.</li>
+            </ul>
+        </section>
+        <section id="contact">
+            <h2>How to Contact me?</h2>
+            <ul>
+                <li>Message me in Discord, my username is <strong>kool#9308</strong> (Recommended)</li>
+                <br>
+                <li>Message me in game, my IGN is <strong>KoolRocka</strong></li>
+                <br>
+            </ul>
+        </section>
+        <section id="baits">
+            <h2>Fishing Baits</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th scope="col">Name</td>
+                        <th scope="col">Price</th>
+                        <th scope="col">Low Stock #</th>
+                        <th scope="col">Minimum</th>
+                        <th scope="col">Maximum</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Whizmo Gizmo</td>
+                        <td>4WLs</td>
+                        <td>50</td>
+                        <td>100</td>
+                        <td>200</td>
+                    </tr>
+                    <tr>
+                        <td>Candy Cane Bait</td>
+                        <td>4WLs</td>
+                        <td>50</td>
+                        <td>100</td>
+                        <td>200</td>
+                    </tr>
+                    <tr>
+                        <td>Catch-of-the-Day Bait</td>
+                        <td>25WLs</td>
+                        <td>15</td>
+                        <td>20</td>
+                        <td>30</td>
+                    </tr>
+                    <tr>
+                        <td>Shrimp Lure</td>
+                        <td>8/WL</td>
+                        <td>1000</td>
+                        <td>2000</td>
+                        <td>5000</td>
+                    </tr>
+                    <tr>
+                        <td>Otherworldly Bait</td>
+                        <td>5WL</td>
+                        <td>50</td>
+                        <td>100</td>
+                        <td>200</td>
+                    </tr>
+                    <tr>
+                        <td>Lesser Otherworldly Bait</td>
+                        <td>30/WL</td>
+                        <td>500</td>
+                        <td>2000</td>
+                        <td>10000</td>
+                    </tr>
+                    <tr>
+                        <td>Minor Otherworldly Bait</td>
+                        <td>150/WL</td>
+                        <td>1000</td>
+                        <td>3000</td>
+                        <td>10000</td>
+                    </tr>
+                    <tr>
+                        <td>Mega-Pellet Bait</td>
+                        <td>25/WL</td>
+                        <td>500</td>
+                        <td>2000</td>
+                        <td>10000</td>
+                    </tr>
+                    <tr>
+                        <td>Uranium Glowing Lure</td>
+                        <td>30/WL</td>
+                        <td>2000</td>
+                        <td>2000</td>
+                        <td>10000</td>
+                    </tr>
+                    <tr>
+                        <td>Fishing Fly</td>
+                        <td>80/WL</td>
+                        <td>2000</td>
+                        <td>3000</td>
+                        <td>10000</td>
+                    </tr>
+                    <tr>
+                        <td>Salmon Eggs</td>
+                        <td>250/WL</td>
+                        <td>2000</td>
+                        <td>3000</td>
+                        <td>20000</td>
+                    </tr>
+                    <tr>
+                        <td>Wiggly Worm</td>
+                        <td>250/WL</td>
+                        <td>2000</td>
+                        <td>3000</td>
+                        <td>20000</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <section id="rods">
+            <h2>Fishing Rods</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th scope="col">Name</td>
+                        <th scope="col">Price</th>
+                        <th scope="col">Low Stock #</th>
+                        <th scope="col">Minimum</th>
+                        <th scope="col">Maximum</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Fishing Rod</td>
+                        <td>20/WL</td>
+                        <td>1000</td>
+                        <td>2000</td>
+                        <td>10000</td>
+                    </tr>
+                    <tr>
+                        <td>E-Z Rod</td>
+                        <td>20/WL</td>
+                        <td>1000</td>
+                        <td>2000</td>
+                        <td>10000</td>
+                    </tr>
+                    <tr>
+                        <td>Licorice Rod</td>
+                        <td>250WLs</td>
+                        <td>2</td>
+                        <td>2</td>
+                        <td>4</td>
+                    </tr>
+                    <tr>
+                        <td>Magical Rainbow Fishing Rod</td>
+                        <td>280WLs</td>
+                        <td>2</td>
+                        <td>2</td>
+                        <td>4</td>
+                    </tr>
+                    <tr>
+                        <td>Reliable Anomarod</td>
+                        <td>1WL</td>
+                        <td>50</td>
+                        <td>100</td>
+                        <td>200</td>
+                    </tr>
+                    <tr>
+                        <td>Pristine Anomarod</td>
+                        <td>15WLs</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>50</td>
+                    </tr>
+                    <tr>
+                        <td>Elegant Anomarod</td>
+                        <td>80WLs</td>
+                        <td>2</td>
+                        <td>2</td>
+                        <td>4</td>
+                    </tr>
+                    <tr>
+                        <td>Exquisite Anomarod</td>
+                        <td>100WLs</td>
+                        <td>2</td>
+                        <td>2</td>
+                        <td>4</td>
+                    </tr>
+                    <tr>
+                        <td>Golden Rod</td>
+                        <td>1000WLs</td>
+                        <td>1</td>
+                        <td>1</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <td>Cursed Rod</td>
+                        <td>800WLs</td>
+                        <td>1</td>
+                        <td>1</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <td>Thanksgiving Dinner Fishing Rod</td>
+                        <td>2000WLs</td>
+                        <td>1</td>
+                        <td>1</td>
+                        <td>1</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
     </main>
+
+    <footer>
+        <h5><emph>Last Edited:</emph> October 4, 2022</h5>
+    </footer>
 </html>
