--- a/spot.html
+++ b/spot.html
@@ -5,6 +5,7 @@
     </head>
 
     <header>
+        <!--
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
@@ -14,11 +15,70 @@
                 <li><a href="supplier.html">Supplier</a></li>
             </ul>
         </nav>
+    -->
     </header>
 
     <main>
         <section>
-            <p>This is Spot</p>
+            <h1>BUYBAIT Spot Guide ~ A Renter's Perspective</h1>
+            <h2>Motivations</h2>
+            <p>A lot of people have visited my shop and asked me "Do you even profit?", 
+               how do you profit with 100DLs of spots. 
+               They have also asked how many tackle farms you have, 
+               and most of them were shocked with I said only the tackles 
+               that are currently in vends, which means almost zero!</p>
+            <p>I also want to make this guide because a lot of people are skeptical 
+               or unsure if the spots can really make a profit, 
+               and among those people was me initially. I was unsure if I would even 
+               break even by spending that additional 10dls to buy spots. 
+               I have also searched through the server and a lot of people 
+               pondered upon it, “is BUYBAIT spot worth it? BUYBAIT spot profitable?” 
+               If you simply search “BUYBAIT spot” you will know what I mean. </p>
+            <p>Rightly so, these claims are absolutely legitimate and 
+                its normal to be doubtful if the spots will make a profit. 
+                So, if you truly want to understand how these spots work and 
+                if you are willing to open up your mind and accept new ideas, 
+                then read on!</p>
+            <p>Fun Fact, you do not need any tackles to do this!</p>
+        </section>
+        <section>
+            <h2>Profit Sharing:</h2>
+            <p>So how many DLs do I need to start doing this? Or how high is the barrier of entry?
+                You may find that since I own so many spots, you need have a lot of DLs to start, however, let me tell you that I started in May with a single yellow spot!
+                <br><br>
+                If you go to my world KOOLVEND, and you add up all the vending machines, you would find that there are 72 vending machines, with the current market price of 4WLs each, you would need 288WLs for the vends
+                <br><br>
+                As for the world name, I sort of having a mixed-up opinion on it. For the argument of it does not matter, it will always be linked to BUYBAIT so it doesn’t matter what it is For the argument of it does matter, your customers will come back to your world next time instead of buybait if your world name is memorable, but that depends more on that one example being stock amount, if your world is empty, it doesn’t matter if your world name is SHRIMP because who would go to an empty world to buy items that the customer knows isn’t available there?
+                <br><br>
+                So, I would argue that it matters to an extent, and you would want to find a name that you think works, but don’t go out of your way to buy for rare world names, because quite frankly, it does not matter that much at this stage. So, I will assume that you did not spend WLs on the world name.
+                <br><br>
+                Spot price: the lowest price spot currently available is 300WLs, so I will include that as the price. But do realize that spending more WLs will help you earn more wls, think of it as an investment
+                <br><br>
+                WLs to stock:
+                You do have to be fairly active in the game to keep your shop stocked. If you are, then you don’t need a whole lot of wls to stock, for example, let's say you have a budget of 400wls, you can simply use 30wls to stock shrimps, you might ask, how is 30wls enough to stock shrimps? The answer to that is you stock consistently. Let's say in one hour, 90% of your shrimp stocks are gone, then you restock! You will always end up with more wls each time you restock because you are selling at a more expensive price! For this amount, I will use 400WLs.
+                <br><br>
+                Adding up the costs, 288WLs + 300WLs + 400WLs = 988WLs, lets round to 1000WLs, or 10DLs for convenience. And that’s all the wls you need to start your very own fishing shop!
+                <br>
+                </p>
+
+                <h4>Below is a spreadsheet of the data in July.</h4>
+                <embed src="data.html" width="1500" height="500"\>
+                <p>To help you understand it, <br>
+                    The cells colored in blue means that there was fishing role quest on that day. <br>
+                    The cells colored yellow mean there was carnival on that day. <br>
+                    Revenue means the total amount of sales made <br>
+                    Profit means the revenue - stock price <br>
+                    Net profit means profit - rent <br>
+                    <br>
+                    This means that from 07/01/2022 - 08/01/2022, I had a revenue of 58973WLs, a profit of 18395WLs, and a net profit of 8395WLs.
+                    <br><br>
+                    For the price that are in decimals, you have to do 1 divide by the price I have to get the result. For example, E-Z Rod has a restock price of 0.05 would mean 1/0.05, which is 20, which means that its price is 20/WL.
+                    </p>
+        </section>
+        <section>
+            <h4>Final Note:</h4>
+            <p>if you just are too afraid that you won’t profit, think of it this way, the 300WLs is a monthly price, the worst thing is that you make zero wls and choose not to renew, so the net loss is 300WLs, Is 300wls really that much in today’s economy?
+            </p>
         </section>
     </main>
 </html>
