--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <br>
                 <h1>Welcome to KOOL!</h1>
                 <h3>Please click <a href="supplier.html">Here</a> if you are interested in supplying for KOOLVEND!</h3>
+                <h3>Please click <a href="spot.html">Here</a> for BUYBAIT spot guide!</h3>
             </center>
             </section>
     </main>
