Added Post Date

--- a/spot.html
+++ b/spot.html
@@ -79,6 +79,7 @@
             <h4>Final Note:</h4>
             <p>if you just are too afraid that you won’t profit, think of it this way, the 300WLs is a monthly price, the worst thing is that you make zero wls and choose not to renew, so the net loss is 300WLs, Is 300wls really that much in today’s economy?
             </p>
+            <p>Posted on October 7, 2022</p>
         </section>
     </main>
 </html>
